# project

./: README.md  ai_assistant.py  app.py  auth.py  auto_migrate.py  cookies.txt  db_utils.py  expense_reports.py.bak  main.py  models.py  notifications.py  onboarding.py  permissions.py  pyproject.toml  replit.nix  scheduled_tasks.py  signatures.py  utils.py
attached_assets/: Pasted---1743381081646.txt  Pasted--AttributeError-AttributeError-OtherTransaction-object-has-no-attribute-user-Traceback-most-r-1743570852515.txt  Pasted--BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-purchase-reque-1743483440494.txt  Pasted--Deployments-Production-Status-ahmed-deployed-about-3-hours-ago-Domain-https-meyar-replit-app-Type-1743575655074.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-invoices-1743565256657.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-invoices-1743569552722.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-purcha-1743438638906.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-purchase-1743565044311.txt  Pasted--ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-purchase-1743569258867.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-ai-assistant-in-1743482558202.txt  (+11 more)
routes/: admin.py  ai_assistant_routes.py  approvals.py  auth.py  auth_utils.py  (+16 more)
(+110 files in other folders)
