[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "js2py>=0.74",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "flask-socketio>=5.5.1",
    "eventlet>=0.39.1",
    "openai>=1.70.0",
    "flask-migrate>=4.1.0",
    "alembic>=1.15.2",
]
